<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/branco">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@color/branco">

            <LinearLayout
                android:id="@+id/cabecalho"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_alignParentTop="true"
                android:background="@color/branco"
                android:orientation="vertical"
                android:paddingLeft="@dimen/padding_detail_left"
                android:paddingRight="@dimen/padding_default"
                android:weightSum="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tarefa"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txvTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:hint="@string/selecione_tarefa"
                    android:textColor="@color/secondaryText"
                    android:textColorHint="@color/secondaryText"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnlDataVencimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cabecalho"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/padding_default"
                android:paddingTop="@dimen/padding_default">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_action_today" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/padding_default"
                    android:paddingRight="@dimen/padding_default">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/data_vencimento"
                        android:textColor="@color/primaryText" />

                    <TextView
                        android:id="@+id/txvDataVencimento"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:textColor="@color/secondaryText"
                        android:textColorHint="@color/secondaryText"
                        android:textSize="16sp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnlPrioridade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lnlDataVencimento"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/padding_default"
                android:paddingTop="@dimen/padding_default">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_action_prioridade" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/padding_default"
                    android:paddingRight="@dimen/padding_default">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prioridade"
                        android:textColor="@color/primaryText" />

                    <Spinner
                        android:id="@+id/spnPrioridade"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:popupBackground="@color/branco"
                        android:textColor="@color/secondaryText"
                        android:textSize="16sp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lnlPrioridade"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/padding_default"
                android:paddingTop="@dimen/padding_default">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_action_comment" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/padding_default"
                    android:paddingRight="@dimen/padding_default">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/obs"
                        android:textColor="@color/primaryText" />

                    <TextView
                        android:id="@+id/txvObs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sem_comentario"
                        android:textColor="@color/secondaryText"
                        android:textColorHint="@color/secondaryText"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>


    </RelativeLayout>

</ScrollView>
